--- a/Css/style.css
+++ b/Css/style.css
@@ -106,10 +106,19 @@ body {
 /* Contenedor interno */
 .resultados-registro-cont {
   width: 70%;
-  margin: 0 auto;
-  text-align: center;
-  box-sizing: inherit;
+  height: 500px;
+  font-size: 20px;
+  margin: 3em auto;
+  box-sizing: border-box;
   display: block;
-  padding-top: 1.5em;
+  padding: 1.5em;
   background: white;
+  display: flex;
+  justify-content: center;
+}
+
+.texto-resultados-registro {
+  width: 65%;
+  margin-top: 5em;
+  text-align: justify;
 }
